# omms-rm

./: .env.prod  .env.prod.db  docker-compose-hub.prod.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.dev  .env.prod  Dockerfile  Dockerfile.dev  Dockerfile.prod  docker-compose.yml  pyproject.toml  schema.json
backend/accounts/: admin.py  api.py  models.py  security.py
backend/accounts/migrations/: 0001_initial.py  0002_account_msid_account_team_name.py  0003_roles.py  0004_pendingroles.py  0005_alter_account_id_alter_authtoken_id_and_more.py  0006_alter_account_first_name_alter_account_last_name_and_more.py
backend/app/: api.py  exceptions.py  settings.py  urls.py
backend/app/utils/: api.py  models.py
backend/chat/: admin.py  api.py  models.py
backend/chat/migrations/: 0001_initial.py  0002_rename_uuid_chatsession_session_id.py
backend/releases/: admin.py  api.py  models.py  views.py
backend/releases/migrations/: 0001_initial.py  0002_release_name_alter_release_uuid.py  0003_remove_release_hotfix_branch_and_more.py  0004_constant_name.py  0005_approver.py  0006_approver_approved.py  0007_revokeapproval.py  0008_revokeapproval_uuid.py  0009_remove_revokeapproval_uuid_alter_revokeapproval_user.py  0010_release_created_by_release_updated_by.py  0011_releaseitem_devops_notes.py  0012_alter_approver_user.py  0013_alter_release_updated_by.py  0014_alter_release_created_by.py  0015_target.py  0017_remove_approver_user_approver_group.py  0019_alter_release_deployment_status.py  (+13 more)
backend/tickets/: admin.py  api.py  models.py
(+59 files in other folders)
